# Lab_Logger

./: .gitignore  Cargo.toml
src/: api.rs  config.rs  database.rs  lib.rs  main.rs
web/: index.html
web/assets/css/: style.css  tailwind.output.css
web/assets/js/: fetch-data.js  print.js  script.js
