[package]
name = "lab_logger"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
chrono-tz = "0.9.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
dialoguer = "0.11.0"
open = "5.3.0"
regex = "1.10.6"
rpassword = "7.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
